get tests to build again

--- a/Src/Sxc.Tests/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
+++ b/Src/Sxc.Tests/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
@@ -7,6 +7,7 @@
     <IsTestProject>true</IsTestProject>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
