--- a/Src/Sxc/ToSic.Sxc.Images/ToSic.Sxc.Images.csproj
+++ b/Src/Sxc/ToSic.Sxc.Images/ToSic.Sxc.Images.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Edit\ToSic.Sxc.Edit.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
