--- a/Src/Sxc/ToSic.Sxc.Edit/ToSic.Sxc.Edit.csproj
+++ b/Src/Sxc/ToSic.Sxc.Edit/ToSic.Sxc.Edit.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
