--- a/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
+++ b/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Cms\ToSic.Sxc.Cms.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
