--- a/Src/Sxc/ToSic.Sxc.Render/ToSic.Sxc.Render.csproj
+++ b/Src/Sxc/ToSic.Sxc.Render/ToSic.Sxc.Render.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\" />
     <Folder Include="Web\PageServiceShared.Internal\" />
     <Folder Include="Web\PageService.Internal\" />
   </ItemGroup>
