--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -91,7 +91,7 @@
     <Folder Include="Code\TypedModel\" />
     <Folder Include="Data\Internal\Dynamic\" />
     <Folder Include="Data\Internal\Metadata\" />
-    <Folder Include="Edit\Internal\" />
+    <Folder Include="Services\RenderService\" />
   </ItemGroup>
 
 </Project>
