--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -87,11 +87,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Apps\Internal\Paths\" />
     <Folder Include="Code\TypedModel\" />
     <Folder Include="Data\Internal\Dynamic\" />
     <Folder Include="Data\Internal\Metadata\" />
-    <Folder Include="Services\RenderService\" />
+    <Folder Include="Services\DataServices\" />
   </ItemGroup>
 
 </Project>
