Move a lot to Sxc.Data

--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -88,6 +88,7 @@
 
   <ItemGroup>
     <Folder Include="Code\Internal\HotBuild\" />
+    <Folder Include="Data\Internal\Decorators\" />
   </ItemGroup>
 
 </Project>
