--- a/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
+++ b/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Apps\ToSic.Sxc.Apps.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
