--- a/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
+++ b/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <TargetFrameworks>net472;net9.0;</TargetFrameworks>
     <RootNamespace>ToSic.Sxc</RootNamespace>
-    <AssemblyName>ToSic.Sxc.Edit</AssemblyName>
+    <AssemblyName>ToSic.Sxc.Adam</AssemblyName>
     <Deterministic>true</Deterministic>
     <!--<FileAlignment>512</FileAlignment>-->
     <NoWarn>7035;CS1591</NoWarn>
