--- a/Src/Sxc/ToSic.Sxc.Core/ToSic.Sxc.Core.csproj
+++ b/Src/Sxc/ToSic.Sxc.Core/ToSic.Sxc.Core.csproj
@@ -43,15 +43,15 @@
     <!--<Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />-->
-    <!--<Reference Include="System.Web" />-->
+    <Reference Include="System.Web" />
     <!--<Reference Include="System.Web.Http">
       <HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>-->
-    <!--<Reference Include="ToSic.Razor">
+    <Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
-    </Reference>-->
+    </Reference>
     <!--<Reference Include="Microsoft.CSharp" />-->
   </ItemGroup>
 
@@ -63,9 +63,9 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />-->
 
-    <!--<Reference Include="ToSic.Razor">
+    <Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
-    </Reference>-->
+    </Reference>
   </ItemGroup>
 
 </Project>
