--- a/Src/Sxc/ToSic.Sxc.Blocks/ToSic.Sxc.Blocks.csproj
+++ b/Src/Sxc/ToSic.Sxc.Blocks/ToSic.Sxc.Blocks.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Apps\ToSic.Sxc.Apps.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
