--- a/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
+++ b/Src/Sxc/ToSic.Sxc.Engines/ToSic.Sxc.Engines.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Apps\ToSic.Sxc.Apps.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
