Move integration and polymorphism

--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -88,6 +88,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Internal\Decorators\" />
+    <Folder Include="Integration\" />
   </ItemGroup>
 
 </Project>
