--- a/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
+++ b/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
