ongoing move of block dependencies to sub projects

--- a/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
+++ b/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Fields.Internal\" />
     <Folder Include="Sys.ExecutionContext\" />
   </ItemGroup>
 
