--- a/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
@@ -42,6 +42,8 @@
     <ProjectReference Include="..\ToSic.Sxc.Apps\ToSic.Sxc.Apps.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Code.Generate\ToSic.Sxc.Code.Generate.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Code.HotBuild\ToSic.Sxc.Code.HotBuild.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.LightSpeed\ToSic.Sxc.LightSpeed.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Render\ToSic.Sxc.Render.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Services\ToSic.Sxc.Services.csproj" />
