--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -93,7 +93,11 @@
 
     <ItemGroup>
       <!-- Global / Shared 2sxc and EAV DLLs-->
-      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.dll" />
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc*.dll" Exclude="ToSic.Sxc.Dnn.Enterprise.dll"/>
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc*.pdb" Exclude="ToSic.Sxc.Dnn.Enterprise.pdb"/>
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sys*.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sys*.pdb" />
+      <!--<AssemblyInclude Include="$(OutDir)\ToSic.Sxc.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Core.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Core.pdb" />
@@ -130,7 +134,7 @@
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Web.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Web.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.WebApi.dll" />
-      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.WebApi.pdb" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.WebApi.pdb" />-->
       <AssemblyInclude Include="$(OutDir)\ToSic.Eav*.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Eav*.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Lib*.dll" />
