moving view models and more

--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Blocks\Internal\View\" />
     <Folder Include="Data\Internal\Decorators\" />
   </ItemGroup>
 
