--- a/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
+++ b/Src/Sxc/ToSic.Sxc.Adam/ToSic.Sxc.Adam.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
