--- a/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
+++ b/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToSic.Sxc.Adam\ToSic.Sxc.Adam.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
