--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -27,12 +27,6 @@
     <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Edit\Toolbar\TweakButton\Internal\**" />
-    <EmbeddedResource Remove="Edit\Toolbar\TweakButton\Internal\**" />
-    <None Remove="Edit\Toolbar\TweakButton\Internal\**" />
-  </ItemGroup>
-
   <!-- Import common files which change how the project compiles -->
   <ItemGroup>
     <!--<Compile Include="..\ToSic.Lib.Imports\SharedAssemblyInfo.cs" Link="Properties\SharedAssemblyInfo.cs" />-->
@@ -84,6 +78,11 @@
     <Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
