--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -93,8 +93,8 @@
 
     <ItemGroup>
       <!-- Global / Shared 2sxc and EAV DLLs-->
-      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc*.dll" Exclude="ToSic.Sxc.Dnn.Enterprise.dll"/>
-      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc*.pdb" Exclude="ToSic.Sxc.Dnn.Enterprise.pdb"/>
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.*.dll" Exclude="ToSic.Sxc.Dnn.Enterprise.dll"/>
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.*.pdb" Exclude="ToSic.Sxc.Dnn.Enterprise.pdb"/>
       <AssemblyInclude Include="$(OutDir)\ToSic.Sys*.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sys*.pdb" />
       <!--<AssemblyInclude Include="$(OutDir)\ToSic.Sxc.dll" />
