--- a/Src/Sxc/ToSic.Sxc.Core/ToSic.Sxc.Core.csproj
+++ b/Src/Sxc/ToSic.Sxc.Core/ToSic.Sxc.Core.csproj
@@ -1,60 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="./Properties/ToSic.Sxc.Shared.props" />
+  <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode-CoreTemp.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net472;net9.0;</TargetFrameworks>
-    <RootNamespace>ToSic.Sxc</RootNamespace>
     <AssemblyName>ToSic.Sxc.Core</AssemblyName>
-    <Deterministic>true</Deterministic>
-    <!--<FileAlignment>512</FileAlignment>-->
-    <NoWarn>7035;CS1591</NoWarn>
-    <Configurations>Debug;Release;DebugOqtane;DebugDnn</Configurations>
-    <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
-    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
-  <!--<PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>-->
-
-  <!-- Import common files which change how the project compiles; AssemblyInfo from 2sxc; rest form Lib.Imports -->
-  <ItemGroup>
-    <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\System.Runtime.CompilerServices.cs" Link="Properties\System.Runtime.CompilerServices.cs" />
-    <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\HideInternalApisOnReleaseOnly.cs" Link="Properties\HideInternalApisOnReleaseOnly.cs" />
-  </ItemGroup>
-
-
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <!--<Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />-->
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Http">
-      <!--<HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>-->
-    </Reference>
-    <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
-    </Reference>
-    <!--<Reference Include="Microsoft.CSharp" />-->
-  </ItemGroup>
+  <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-    <!--<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.8.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-    <PackageReference Include="System.Runtime.Caching" Version="9.0.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />-->
-
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
