--- a/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
+++ b/Src/Sxc/ToSic.Sxc.Data/ToSic.Sxc.Data.csproj
@@ -1,74 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../SharedImports/CsProj.Props/AllImportsForRealCode.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net472;net9.0;</TargetFrameworks>
-    <RootNamespace>ToSic.Sxc</RootNamespace>
     <AssemblyName>ToSic.Sxc.Data</AssemblyName>
-    <Deterministic>true</Deterministic>
-    <!--<FileAlignment>512</FileAlignment>-->
-    <NoWarn>7035;CS1591</NoWarn>
-    <Configurations>Debug;Release;DebugOqtane;DebugDnn</Configurations>
-    <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
-    <!-- Don't generate assembly properties from this XML which should come from the core file, like version - these lines must be in sync in all ToSic.Eav.*.csproj files -->
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <LangVersion>preview</LangVersion>
-    <!-- end: Don't generate... -->
   </PropertyGroup>
 
-
-  <ItemGroup>
-    <Compile Remove="Data\Typed\NewFolder\**" />
-    <EmbeddedResource Remove="Data\Typed\NewFolder\**" />
-    <None Remove="Data\Typed\NewFolder\**" />
-  </ItemGroup>
-
-  <!--<PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>-->
-
-  <!-- Import common files which change how the project compiles; AssemblyInfo from 2sxc; rest form Lib.Imports -->
-  <ItemGroup>
-    <Compile Include="..\..\Sxc\ToSic.Sxc.Core\Properties\SxcSharedAssemblyInfo.cs" Link="Properties\SxcSharedAssemblyInfo.cs" />
-    <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\System.Runtime.CompilerServices.cs" Link="Properties\System.Runtime.CompilerServices.cs" />
-    <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\HideInternalApisOnReleaseOnly.cs" Link="Properties\HideInternalApisOnReleaseOnly.cs" />
-  </ItemGroup>
+  <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
-  </ItemGroup>
-
-
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <!--<Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />-->
-    <Reference Include="System.Web" />
-    <!--<Reference Include="System.Web.Http">
-      <HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
-    </Reference>-->
-    <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-    <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Fields.Internal\" />
   </ItemGroup>
 
 </Project>
