get tests to run again

--- a/Src/ToSic.Sxc.Core.TestHelpers/ToSic.Sxc.Core.TestHelpers.csproj
+++ b/Src/ToSic.Sxc.Core.TestHelpers/ToSic.Sxc.Core.TestHelpers.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\eav-server\ToSic.Eav.Apps.TestsHelpers\ToSic.Eav.Apps.TestHelpers.csproj" />
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
