get centralized .proj for first test project

--- a/Src/SharedImports/CsProj.Props/AllImportsForTestCode.props
+++ b/Src/SharedImports/CsProj.Props/AllImportsForTestCode.props
@@ -1,5 +1,16 @@
 <Project>
-  <!-- Set Target Framework and C# version -->
+
+  <PropertyGroup>
+    <IsTestProject>true</IsTestProject>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <IsPackable>false</IsPackable>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Using Include="Xunit" />
+  </ItemGroup>
+
   <Import Project="./TargetFrameworkAndCSharp.props" />
 
   <!-- Set Default Namespace to ToSic.Sxc-->
@@ -13,6 +24,11 @@
 
   <!-- Include C# files which contain the Assembly Info and some classes so that C# latest is supported (such as init-properties) -->
   <Import Project="./IncludeCode/Compiler Features and API Hiding.props" />
+
+  <!-- Include most xUnit packages and more -->
+  <Import Project="./Tests/xUnit Test Framework.props" />
+
+
 
   <!--WIP-->
   <ItemGroup>
