--- a/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
+++ b/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
@@ -1,34 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../SharedImports/CsProj.Props/AllImportsForTestCode.props" />
+
   <PropertyGroup>
-    <TargetFrameworks>net9.0;net472</TargetFrameworks>
+    <!--<TargetFrameworks>net9.0;net472</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
-    <LangVersion>preview</LangVersion>
-    <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
-    <RootNamespace>ToSic.Sxc</RootNamespace>
+    <LangVersion>preview</LangVersion>-->
+    <!--<Nullable>enable</Nullable>-->
+    <!--<IsPackable>false</IsPackable>-->
+    <!--<RootNamespace>ToSic.Sxc</RootNamespace>-->
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="Xunit.DependencyInjection" Version="9.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
+  </ItemGroup>-->
 
   <!-- Import common files which change how the project compiles; AssemblyInfo from 2sxc; rest form Lib.Imports -->
-  <ItemGroup>
-    <!--<Compile Include="..\Sxc\ToSic.Sxc\Properties\SxcSharedAssemblyInfo.cs" Link="Properties\SxcSharedAssemblyInfo.cs" />-->
+  <!--<ItemGroup>
+    --><!--<Compile Include="..\Sxc\ToSic.Sxc\Properties\SxcSharedAssemblyInfo.cs" Link="Properties\SxcSharedAssemblyInfo.cs" />--><!--
     <Compile Include="..\..\..\eav-server\ToSic.Lib.Imports\System.Runtime.CompilerServices.cs" Link="Properties\System.Runtime.CompilerServices.cs" />
     <Compile Include="..\..\..\eav-server\ToSic.Lib.Imports\HideInternalApisOnReleaseOnly.cs" Link="Properties\HideInternalApisOnReleaseOnly.cs" />
-  </ItemGroup>
+  </ItemGroup>-->
+
+  <Import Project="../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+  <!--<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <Reference Include="ToSic.Razor">
       <HintPath>..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
     </Reference>
@@ -38,7 +42,7 @@
     <Reference Include="ToSic.Razor">
       <HintPath>..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
     </Reference>
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
