--- a/Src/SharedImports/CsProj.Props/Reference/RazorBlade.props
+++ b/Src/SharedImports/CsProj.Props/Reference/RazorBlade.props
@@ -1,17 +1,15 @@
 <Project>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <!-- This is needed for the IHtmlString or whatever -->
-    <Reference Include="System.Web" />
+  <ItemGroup>
     <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework)' == 'net472'">..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework)' == 'net9.0'">..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
     </Reference>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-    <Reference Include="ToSic.Razor">
-      <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
-    </Reference>
+  <!-- This is needed for the IHtmlString or whatever in .net Framework -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <Reference Include="System.Web" />
   </ItemGroup>
 
 </Project>
