--- a/Src/Sxc/ToSic.Sxc.Core.TestHelpers/ToSic.Sxc.Core.TestHelpers.csproj
+++ b/Src/Sxc/ToSic.Sxc.Core.TestHelpers/ToSic.Sxc.Core.TestHelpers.csproj
@@ -9,15 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\eav-server\ToSic.Eav.Apps.TestsHelpers\ToSic.Eav.Apps.TestHelpers.csproj" />
-    <ProjectReference Include="..\Sxc\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
-    <ProjectReference Include="..\Sxc\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
+    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps.TestsHelpers\ToSic.Eav.Apps.TestHelpers.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Core\ToSic.Sxc.Core.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="ToSic.Razor">
-      <HintPath Condition="'$(TargetFramework)' == 'net472'">..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
-      <HintPath Condition="'$(TargetFramework)' == 'net9.0'">..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework)' == 'net472'">..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
+      <HintPath Condition="'$(TargetFramework)' == 'net9.0'">..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
     </Reference>
   </ItemGroup>
 
