--- a/Src/Oqtane/ToSic.Sxc.Oqt.Shared.Tests/ToSic.Sxc.Oqt.Shared.Tests.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Shared.Tests/ToSic.Sxc.Oqt.Shared.Tests.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <LangVersion>preview</LangVersion>
-    <RootNamespace>ToSic.Sxc.Oqt</RootNamespace>
+    <RootNamespace>ToSic.Sxc.Oqtane.Shared</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Core\ToSic.Eav.Core.csproj" />
-    <ProjectReference Include="..\..\Oqtane\ToSic.Sxc.Oqt.Server\ToSic.Sxc.Oqt.Server.csproj" />
-    <ProjectReference Include="..\..\Oqtane\ToSic.Sxc.Oqt.Shared\ToSic.Sxc.Oqt.Shared.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Oqt.Shared\ToSic.Sxc.Oqt.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
