--- a/Src/Sxc/ToSic.Sxc.Configuration.Tests/ToSic.Sxc.Core.Configuration.Tests.csproj
+++ b/Src/Sxc/ToSic.Sxc.Configuration.Tests/ToSic.Sxc.Core.Configuration.Tests.csproj
@@ -1,26 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+  <Import Project="../../SharedImports/CsProj.Props/AllImportsForTestCode.props" />
 
-  <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
+  <Import Project="../../SharedImports/CsProj.Props/Reference/RazorBlade.props" />
 
 </Project>
